[gd_scene load_steps=3 format=3 uid="uid://8ubsklmdk8ip"]

[ext_resource type="Script" path="res://game/player/player.gd" id="1_os3da"]

[sub_resource type="BoxShape3D" id="BoxShape3D_2lptk"]
size = Vector3(1.9, 1.2, 4.9)

[node name="Player" type="VehicleBody3D"]
gravity_scale = 5.0
center_of_mass_mode = 1
center_of_mass = Vector3(0, 0.5, 0.6)
script = ExtResource("1_os3da")

[node name="FrontLeft" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.35, 1.6)
use_as_steering = true
wheel_roll_influence = 0.01
wheel_radius = 0.35
wheel_friction_slip = 1.4
suspension_travel = 0.15
suspension_stiffness = 250.0

[node name="Mesh" type="CSGCylinder3D" parent="FrontLeft"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -0.1, 0, 0)
radius = 0.35
height = 0.3
sides = 12

[node name="FrontRight" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.35, 1.6)
use_as_steering = true
wheel_roll_influence = 0.01
wheel_radius = 0.35
wheel_friction_slip = 1.4
suspension_travel = 0.15
suspension_stiffness = 250.0

[node name="Mesh" type="CSGCylinder3D" parent="FrontRight"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.1, 0, 0)
radius = 0.35
height = 0.3
sides = 12

[node name="RearLeft" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.35, -1.6)
use_as_traction = true
wheel_roll_influence = 0.01
wheel_radius = 0.35
wheel_friction_slip = 1.1
suspension_travel = 0.15
suspension_stiffness = 150.0

[node name="Mesh" type="CSGCylinder3D" parent="RearLeft"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -0.1, 0, 0)
radius = 0.35
height = 0.3
sides = 12

[node name="RearRight" type="VehicleWheel3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.35, -1.6)
use_as_traction = true
wheel_roll_influence = 0.01
wheel_radius = 0.35
wheel_friction_slip = 1.1
suspension_travel = 0.15
suspension_stiffness = 150.0

[node name="Mesh" type="CSGCylinder3D" parent="RearRight"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0.1, 0, 0)
radius = 0.35
height = 0.3
sides = 12

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.85, 0)
shape = SubResource("BoxShape3D_2lptk")

[node name="CenterOfMass" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0.6)

[node name="CameraPivot" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
top_level = true

[node name="ForwardCamera" type="Camera3D" parent="CameraPivot"]
unique_name_in_owner = true
transform = Transform3D(-1, -8.88178e-16, -8.74228e-08, -1.51808e-08, 0.984808, 0.173648, 8.60946e-08, 0.173648, -0.984808, 0, 2, -3.5)
current = true

[node name="BackwardCamera" type="Camera3D" parent="CameraPivot"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 0.984808, 0.173648, 0, -0.173648, 0.984808, 0, 1.8, 3.7)
